--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <commons-lang3.version>3.7</commons-lang3.version>
         <netty.version>4.1.48.Final</netty.version>
         <bouncycastle.version>1.65</bouncycastle.version>
+        <httpclient.version>4.5.9</httpclient.version>
     </properties>
 
     <dependencies>
